applications/sophie/resources/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: web
  annotations:
    argocd.argoproj.io/sync-wave: "2"

spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: sophie-web
  template:
    metadata:
      labels:
        app: sophie-web
    spec:
      imagePullSecrets:
        - name: ghcr-credentials
      containers:
        - name: web
          image: ghcr.io/rokoucha/sophie-web:20260929.100513
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: next-cache
              mountPath: /app/web/.next/cache
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
        - name: next-cache
          emptyDir: {}
