applications/sophie/resources/service-server.yaml
apiVersion: v1
kind: Service

metadata:
  name: server

spec:
  selector:
    app: sophie-server
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 3000
      targetPort: http
