applications/sophie/resources/service-web.yaml
apiVersion: v1
kind: Service

metadata:
  name: web

spec:
  selector:
    app: sophie-web
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 3000
      targetPort: http
