applications/sophie/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  annotations:
    haproxy.org/ssl-redirect: "true"

spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls
      hosts:
        - sophie.ggrel.net
  rules:
    - host: sophie.ggrel.net
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
